--- a/.gitmodules
+++ b/.gitmodules
@@ -613,3 +613,6 @@
 [submodule "500231"]
 	path = 500231
 	url = https://gist.github.com/500231.git
+[submodule "500233"]
+	path = 500233
+	url = https://gist.github.com/500233.git
