--- a/.gitmodules
+++ b/.gitmodules
@@ -628,3 +628,6 @@
 [submodule "627633"]
 	path = 627633
 	url = https://gist.github.com/627633.git
+[submodule "627634"]
+	path = 627634
+	url = https://gist.github.com/627634.git
