--- a/.gitmodules
+++ b/.gitmodules
@@ -625,3 +625,6 @@
 [submodule "627123"]
 	path = 627123
 	url = https://gist.github.com/627123.git
+[submodule "627633"]
+	path = 627633
+	url = https://gist.github.com/627633.git
