--- a/.gitmodules
+++ b/.gitmodules
@@ -631,3 +631,6 @@
 [submodule "627634"]
 	path = 627634
 	url = https://gist.github.com/627634.git
+[submodule "627638"]
+	path = 627638
+	url = https://gist.github.com/627638.git
