--- a/.gitmodules
+++ b/.gitmodules
@@ -619,3 +619,6 @@
 [submodule "516447"]
 	path = 516447
 	url = https://gist.github.com/516447.git
+[submodule "627113"]
+	path = 627113
+	url = https://gist.github.com/627113.git
