--- a/.gitmodules
+++ b/.gitmodules
@@ -616,3 +616,6 @@
 [submodule "500233"]
 	path = 500233
 	url = https://gist.github.com/500233.git
+[submodule "516447"]
+	path = 516447
+	url = https://gist.github.com/516447.git
