--- a/.gitmodules
+++ b/.gitmodules
@@ -622,3 +622,6 @@
 [submodule "627113"]
 	path = 627113
 	url = https://gist.github.com/627113.git
+[submodule "627123"]
+	path = 627123
+	url = https://gist.github.com/627123.git
