--- a/.gitmodules
+++ b/.gitmodules
@@ -640,3 +640,6 @@
 [submodule "627642"]
 	path = 627642
 	url = https://gist.github.com/627642.git
+[submodule "627644"]
+	path = 627644
+	url = https://gist.github.com/627644.git
