--- a/.gitmodules
+++ b/.gitmodules
@@ -637,3 +637,6 @@
 [submodule "627641"]
 	path = 627641
 	url = https://gist.github.com/627641.git
+[submodule "627642"]
+	path = 627642
+	url = https://gist.github.com/627642.git
