--- a/.gitmodules
+++ b/.gitmodules
@@ -646,3 +646,6 @@
 [submodule "639882"]
 	path = 639882
 	url = https://gist.github.com/639882.git
+[submodule "815288"]
+	path = 815288
+	url = https://gist.github.com/815288.git
