--- a/.gitmodules
+++ b/.gitmodules
@@ -634,3 +634,6 @@
 [submodule "627638"]
 	path = 627638
 	url = https://gist.github.com/627638.git
+[submodule "627641"]
+	path = 627641
+	url = https://gist.github.com/627641.git
