--- a/.gitmodules
+++ b/.gitmodules
@@ -643,3 +643,6 @@
 [submodule "627644"]
 	path = 627644
 	url = https://gist.github.com/627644.git
+[submodule "639882"]
+	path = 639882
+	url = https://gist.github.com/639882.git
