--- a/.gitmodules
+++ b/.gitmodules
@@ -655,3 +655,6 @@
 [submodule "1128779"]
 	path = 1128779
 	url = https://gist.github.com/1128779.git
+[submodule "1129985"]
+	path = 1129985
+	url = https://gist.github.com/1129985.git
