--- a/.gitmodules
+++ b/.gitmodules
@@ -664,3 +664,6 @@
 [submodule "1143582"]
 	path = 1143582
 	url = https://gist.github.com/1143582.git
+[submodule "1184514"]
+	path = 1184514
+	url = https://gist.github.com/1184514.git
