--- a/.gitmodules
+++ b/.gitmodules
@@ -652,3 +652,6 @@
 [submodule "1062942"]
 	path = 1062942
 	url = https://gist.github.com/1062942.git
+[submodule "1128779"]
+	path = 1128779
+	url = https://gist.github.com/1128779.git
