--- a/.gitmodules
+++ b/.gitmodules
@@ -658,3 +658,6 @@
 [submodule "1129985"]
 	path = 1129985
 	url = https://gist.github.com/1129985.git
+[submodule "1138635"]
+	path = 1138635
+	url = https://gist.github.com/1138635.git
