--- a/.gitmodules
+++ b/.gitmodules
@@ -649,3 +649,6 @@
 [submodule "815288"]
 	path = 815288
 	url = https://gist.github.com/815288.git
+[submodule "1062942"]
+	path = 1062942
+	url = https://gist.github.com/1062942.git
