--- a/.gitmodules
+++ b/.gitmodules
@@ -661,3 +661,6 @@
 [submodule "1138635"]
 	path = 1138635
 	url = https://gist.github.com/1138635.git
+[submodule "1143582"]
+	path = 1143582
+	url = https://gist.github.com/1143582.git
