--- a/.gitmodules
+++ b/.gitmodules
@@ -670,3 +670,6 @@
 [submodule "1198306"]
 	path = 1198306
 	url = https://gist.github.com/1198306.git
+[submodule "1198329"]
+	path = 1198329
+	url = https://gist.github.com/1198329.git
