--- a/.gitmodules
+++ b/.gitmodules
@@ -667,3 +667,6 @@
 [submodule "1184514"]
 	path = 1184514
 	url = https://gist.github.com/1184514.git
+[submodule "1198306"]
+	path = 1198306
+	url = https://gist.github.com/1198306.git
