--- a/.gitmodules
+++ b/.gitmodules
@@ -682,3 +682,6 @@
 [submodule "1230914"]
 	path = 1230914
 	url = https://gist.github.com/1230914.git
+[submodule "1239716"]
+	path = 1239716
+	url = https://gist.github.com/1239716.git
