--- a/.gitmodules
+++ b/.gitmodules
@@ -676,3 +676,6 @@
 [submodule "1218773"]
 	path = 1218773
 	url = https://gist.github.com/1218773.git
+[submodule "1228615"]
+	path = 1228615
+	url = https://gist.github.com/1228615.git
