--- a/.gitmodules
+++ b/.gitmodules
@@ -679,3 +679,6 @@
 [submodule "1228615"]
 	path = 1228615
 	url = https://gist.github.com/1228615.git
+[submodule "1230914"]
+	path = 1230914
+	url = https://gist.github.com/1230914.git
