--- a/.gitmodules
+++ b/.gitmodules
@@ -673,3 +673,6 @@
 [submodule "1198329"]
 	path = 1198329
 	url = https://gist.github.com/1198329.git
+[submodule "1218773"]
+	path = 1218773
+	url = https://gist.github.com/1218773.git
