--- a/.gitmodules
+++ b/.gitmodules
@@ -697,3 +697,6 @@
 [submodule "1650800"]
 	path = 1650800
 	url = https://gist.github.com/1650800.git
+[submodule "1953288"]
+	path = 1953288
+	url = https://gist.github.com/1953288.git
