--- a/.gitmodules
+++ b/.gitmodules
@@ -685,3 +685,6 @@
 [submodule "1239716"]
 	path = 1239716
 	url = https://gist.github.com/1239716.git
+[submodule "1356549"]
+	path = 1356549
+	url = https://gist.github.com/1356549.git
