--- a/.gitmodules
+++ b/.gitmodules
@@ -694,3 +694,6 @@
 [submodule "1642629"]
 	path = 1642629
 	url = https://gist.github.com/1642629.git
+[submodule "1650800"]
+	path = 1650800
+	url = https://gist.github.com/1650800.git
