--- a/.gitmodules
+++ b/.gitmodules
@@ -691,3 +691,6 @@
 [submodule "1465725"]
 	path = 1465725
 	url = https://gist.github.com/1465725.git
+[submodule "1642629"]
+	path = 1642629
+	url = https://gist.github.com/1642629.git
