--- a/.gitmodules
+++ b/.gitmodules
@@ -688,3 +688,6 @@
 [submodule "1356549"]
 	path = 1356549
 	url = https://gist.github.com/1356549.git
+[submodule "1465725"]
+	path = 1465725
+	url = https://gist.github.com/1465725.git
