--- a/.gitmodules
+++ b/.gitmodules
@@ -712,3 +712,6 @@
 [submodule "2872116"]
 	path = 2872116
 	url = https://gist.github.com/2872116.git
+[submodule "2913900"]
+	path = 2913900
+	url = https://gist.github.com/2913900.git
