--- a/.gitmodules
+++ b/.gitmodules
@@ -706,3 +706,6 @@
 [submodule "1995720"]
 	path = 1995720
 	url = https://gist.github.com/1995720.git
+[submodule "2024622"]
+	path = 2024622
+	url = https://gist.github.com/2024622.git
