--- a/.gitmodules
+++ b/.gitmodules
@@ -703,3 +703,6 @@
 [submodule "1977869"]
 	path = 1977869
 	url = https://gist.github.com/1977869.git
+[submodule "1995720"]
+	path = 1995720
+	url = https://gist.github.com/1995720.git
