--- a/.gitmodules
+++ b/.gitmodules
@@ -700,3 +700,6 @@
 [submodule "1953288"]
 	path = 1953288
 	url = https://gist.github.com/1953288.git
+[submodule "1977869"]
+	path = 1977869
+	url = https://gist.github.com/1977869.git
