--- a/.gitmodules
+++ b/.gitmodules
@@ -715,3 +715,6 @@
 [submodule "2913900"]
 	path = 2913900
 	url = https://gist.github.com/2913900.git
+[submodule "2919980"]
+	path = 2919980
+	url = https://gist.github.com/2919980.git
