--- a/.gitmodules
+++ b/.gitmodules
@@ -709,3 +709,6 @@
 [submodule "2024622"]
 	path = 2024622
 	url = https://gist.github.com/2024622.git
+[submodule "2872116"]
+	path = 2872116
+	url = https://gist.github.com/2872116.git
