--- a/.gitmodules
+++ b/.gitmodules
@@ -718,3 +718,6 @@
 [submodule "2919980"]
 	path = 2919980
 	url = https://gist.github.com/2919980.git
+[submodule "2928481"]
+	path = 2928481
+	url = https://gist.github.com/2928481.git
