--- a/.gitmodules
+++ b/.gitmodules
@@ -721,3 +721,6 @@
 [submodule "2928481"]
 	path = 2928481
 	url = https://gist.github.com/2928481.git
+[submodule "2941089"]
+	path = 2941089
+	url = https://gist.github.com/2941089.git
