--- a/.gitmodules
+++ b/.gitmodules
@@ -724,3 +724,6 @@
 [submodule "2941089"]
 	path = 2941089
 	url = https://gist.github.com/2941089.git
+[submodule "2941192"]
+	path = 2941192
+	url = https://gist.github.com/2941192.git
