--- a/.gitmodules
+++ b/.gitmodules
@@ -727,3 +727,6 @@
 [submodule "2941192"]
 	path = 2941192
 	url = https://gist.github.com/2941192.git
+[submodule "2943870"]
+	path = 2943870
+	url = https://gist.github.com/2943870.git
