--- a/.gitmodules
+++ b/.gitmodules
@@ -730,3 +730,6 @@
 [submodule "2943870"]
 	path = 2943870
 	url = https://gist.github.com/2943870.git
+[submodule "2943872"]
+	path = 2943872
+	url = https://gist.github.com/2943872.git
