--- a/.gitmodules
+++ b/.gitmodules
@@ -742,3 +742,6 @@
 [submodule "2944207"]
 	path = 2944207
 	url = https://gist.github.com/2944207.git
+[submodule "2944406"]
+	path = 2944406
+	url = https://gist.github.com/2944406.git
