--- a/.gitmodules
+++ b/.gitmodules
@@ -739,3 +739,6 @@
 [submodule "2944196"]
 	path = 2944196
 	url = https://gist.github.com/2944196.git
+[submodule "2944207"]
+	path = 2944207
+	url = https://gist.github.com/2944207.git
