--- a/.gitmodules
+++ b/.gitmodules
@@ -736,3 +736,6 @@
 [submodule "2944095"]
 	path = 2944095
 	url = https://gist.github.com/2944095.git
+[submodule "2944196"]
+	path = 2944196
+	url = https://gist.github.com/2944196.git
