--- a/.gitmodules
+++ b/.gitmodules
@@ -745,3 +745,6 @@
 [submodule "2944406"]
 	path = 2944406
 	url = https://gist.github.com/2944406.git
+[submodule "2944736"]
+	path = 2944736
+	url = https://gist.github.com/2944736.git
