--- a/.gitmodules
+++ b/.gitmodules
@@ -748,3 +748,6 @@
 [submodule "2944736"]
 	path = 2944736
 	url = https://gist.github.com/2944736.git
+[submodule "2944804"]
+	path = 2944804
+	url = https://gist.github.com/2944804.git
