--- a/.gitmodules
+++ b/.gitmodules
@@ -733,3 +733,6 @@
 [submodule "2943872"]
 	path = 2943872
 	url = https://gist.github.com/2943872.git
+[submodule "2944095"]
+	path = 2944095
+	url = https://gist.github.com/2944095.git
