--- a/.gitmodules
+++ b/.gitmodules
@@ -760,3 +760,6 @@
 [submodule "2946345"]
 	path = 2946345
 	url = https://gist.github.com/2946345.git
+[submodule "2946347"]
+	path = 2946347
+	url = https://gist.github.com/2946347.git
