--- a/.gitmodules
+++ b/.gitmodules
@@ -751,3 +751,6 @@
 [submodule "2944804"]
 	path = 2944804
 	url = https://gist.github.com/2944804.git
+[submodule "2946340"]
+	path = 2946340
+	url = https://gist.github.com/2946340.git
