--- a/.gitmodules
+++ b/.gitmodules
@@ -754,3 +754,6 @@
 [submodule "2946340"]
 	path = 2946340
 	url = https://gist.github.com/2946340.git
+[submodule "2946344"]
+	path = 2946344
+	url = https://gist.github.com/2946344.git
