--- a/.gitmodules
+++ b/.gitmodules
@@ -757,3 +757,6 @@
 [submodule "2946344"]
 	path = 2946344
 	url = https://gist.github.com/2946344.git
+[submodule "2946345"]
+	path = 2946345
+	url = https://gist.github.com/2946345.git
