--- a/.gitmodules
+++ b/.gitmodules
@@ -763,3 +763,6 @@
 [submodule "2946347"]
 	path = 2946347
 	url = https://gist.github.com/2946347.git
+[submodule "2946348"]
+	path = 2946348
+	url = https://gist.github.com/2946348.git
