--- a/.gitmodules
+++ b/.gitmodules
@@ -775,3 +775,6 @@
 [submodule "2946358"]
 	path = 2946358
 	url = https://gist.github.com/2946358.git
+[submodule "2946360"]
+	path = 2946360
+	url = https://gist.github.com/2946360.git
