--- a/.gitmodules
+++ b/.gitmodules
@@ -766,3 +766,6 @@
 [submodule "2946348"]
 	path = 2946348
 	url = https://gist.github.com/2946348.git
+[submodule "2946349"]
+	path = 2946349
+	url = https://gist.github.com/2946349.git
