--- a/.gitmodules
+++ b/.gitmodules
@@ -769,3 +769,6 @@
 [submodule "2946349"]
 	path = 2946349
 	url = https://gist.github.com/2946349.git
+[submodule "2946352"]
+	path = 2946352
+	url = https://gist.github.com/2946352.git
