--- a/.gitmodules
+++ b/.gitmodules
@@ -772,3 +772,6 @@
 [submodule "2946352"]
 	path = 2946352
 	url = https://gist.github.com/2946352.git
+[submodule "2946358"]
+	path = 2946358
+	url = https://gist.github.com/2946358.git
