--- a/.gitmodules
+++ b/.gitmodules
@@ -778,3 +778,6 @@
 [submodule "2946360"]
 	path = 2946360
 	url = https://gist.github.com/2946360.git
+[submodule "2947489"]
+	path = 2947489
+	url = https://gist.github.com/2947489.git
