--- a/.gitmodules
+++ b/.gitmodules
@@ -790,3 +790,6 @@
 [submodule "2952833"]
 	path = 2952833
 	url = https://gist.github.com/2952833.git
+[submodule "2956650"]
+	path = 2956650
+	url = https://gist.github.com/2956650.git
