--- a/.gitmodules
+++ b/.gitmodules
@@ -787,3 +787,6 @@
 [submodule "2951979"]
 	path = 2951979
 	url = https://gist.github.com/2951979.git
+[submodule "2952833"]
+	path = 2952833
+	url = https://gist.github.com/2952833.git
