--- a/.gitmodules
+++ b/.gitmodules
@@ -793,3 +793,6 @@
 [submodule "2956650"]
 	path = 2956650
 	url = https://gist.github.com/2956650.git
+[submodule "2956671"]
+	path = 2956671
+	url = https://gist.github.com/2956671.git
