--- a/.gitmodules
+++ b/.gitmodules
@@ -784,3 +784,6 @@
 [submodule "2951947"]
 	path = 2951947
 	url = https://gist.github.com/2951947.git
+[submodule "2951979"]
+	path = 2951979
+	url = https://gist.github.com/2951979.git
