--- a/.gitmodules
+++ b/.gitmodules
@@ -796,3 +796,6 @@
 [submodule "2956671"]
 	path = 2956671
 	url = https://gist.github.com/2956671.git
+[submodule "2957767"]
+	path = 2957767
+	url = https://gist.github.com/2957767.git
