--- a/.gitmodules
+++ b/.gitmodules
@@ -781,3 +781,6 @@
 [submodule "2947489"]
 	path = 2947489
 	url = https://gist.github.com/2947489.git
+[submodule "2951947"]
+	path = 2951947
+	url = https://gist.github.com/2951947.git
