--- a/.gitmodules
+++ b/.gitmodules
@@ -808,3 +808,6 @@
 [submodule "2986851"]
 	path = 2986851
 	url = https://gist.github.com/2986851.git
+[submodule "2987076"]
+	path = 2987076
+	url = https://gist.github.com/2987076.git
