--- a/.gitmodules
+++ b/.gitmodules
@@ -802,3 +802,6 @@
 [submodule "2963333"]
 	path = 2963333
 	url = https://gist.github.com/2963333.git
+[submodule "2963337"]
+	path = 2963337
+	url = https://gist.github.com/2963337.git
