--- a/.gitmodules
+++ b/.gitmodules
@@ -805,3 +805,6 @@
 [submodule "2963337"]
 	path = 2963337
 	url = https://gist.github.com/2963337.git
+[submodule "2986851"]
+	path = 2986851
+	url = https://gist.github.com/2986851.git
