--- a/.gitmodules
+++ b/.gitmodules
@@ -811,3 +811,6 @@
 [submodule "2987076"]
 	path = 2987076
 	url = https://gist.github.com/2987076.git
+[submodule "2993752"]
+	path = 2993752
+	url = https://gist.github.com/2993752.git
