--- a/.gitmodules
+++ b/.gitmodules
@@ -799,3 +799,6 @@
 [submodule "2957767"]
 	path = 2957767
 	url = https://gist.github.com/2957767.git
+[submodule "2963333"]
+	path = 2963333
+	url = https://gist.github.com/2963333.git
