--- a/.gitmodules
+++ b/.gitmodules
@@ -814,3 +814,6 @@
 [submodule "2993752"]
 	path = 2993752
 	url = https://gist.github.com/2993752.git
+[submodule "2993847"]
+	path = 2993847
+	url = https://gist.github.com/2993847.git
