--- a/.gitmodules
+++ b/.gitmodules
@@ -823,3 +823,6 @@
 [submodule "3006521"]
 	path = 3006521
 	url = https://gist.github.com/3006521.git
+[submodule "3036403"]
+	path = 3036403
+	url = https://gist.github.com/3036403.git
