--- a/.gitmodules
+++ b/.gitmodules
@@ -826,3 +826,6 @@
 [submodule "3036403"]
 	path = 3036403
 	url = https://gist.github.com/3036403.git
+[submodule "3043222"]
+	path = 3043222
+	url = https://gist.github.com/3043222.git
