--- a/.gitmodules
+++ b/.gitmodules
@@ -817,3 +817,6 @@
 [submodule "2993847"]
 	path = 2993847
 	url = https://gist.github.com/2993847.git
+[submodule "2993848"]
+	path = 2993848
+	url = https://gist.github.com/2993848.git
