--- a/.gitmodules
+++ b/.gitmodules
@@ -820,3 +820,6 @@
 [submodule "2993848"]
 	path = 2993848
 	url = https://gist.github.com/2993848.git
+[submodule "3006521"]
+	path = 3006521
+	url = https://gist.github.com/3006521.git
