--- a/.gitmodules
+++ b/.gitmodules
@@ -829,3 +829,6 @@
 [submodule "3043222"]
 	path = 3043222
 	url = https://gist.github.com/3043222.git
+[submodule "3043491"]
+	path = 3043491
+	url = https://gist.github.com/3043491.git
