--- a/.gitmodules
+++ b/.gitmodules
@@ -841,3 +841,6 @@
 [submodule "3051421"]
 	path = 3051421
 	url = https://gist.github.com/3051421.git
+[submodule "3078745"]
+	path = 3078745
+	url = https://gist.github.com/3078745.git
