--- a/.gitmodules
+++ b/.gitmodules
@@ -838,3 +838,6 @@
 [submodule "3051377"]
 	path = 3051377
 	url = https://gist.github.com/3051377.git
+[submodule "3051421"]
+	path = 3051421
+	url = https://gist.github.com/3051421.git
