--- a/.gitmodules
+++ b/.gitmodules
@@ -832,3 +832,6 @@
 [submodule "3043491"]
 	path = 3043491
 	url = https://gist.github.com/3043491.git
+[submodule "3051055"]
+	path = 3051055
+	url = https://gist.github.com/3051055.git
