--- a/.gitmodules
+++ b/.gitmodules
@@ -835,3 +835,6 @@
 [submodule "3051055"]
 	path = 3051055
 	url = https://gist.github.com/3051055.git
+[submodule "3051377"]
+	path = 3051377
+	url = https://gist.github.com/3051377.git
