--- a/.gitmodules
+++ b/.gitmodules
@@ -844,3 +844,6 @@
 [submodule "3078745"]
 	path = 3078745
 	url = https://gist.github.com/3078745.git
+[submodule "3085150"]
+	path = 3085150
+	url = https://gist.github.com/3085150.git
