--- a/.gitmodules
+++ b/.gitmodules
@@ -853,3 +853,6 @@
 [submodule "3096046"]
 	path = 3096046
 	url = https://gist.github.com/3096046.git
+[submodule "3096079"]
+	path = 3096079
+	url = https://gist.github.com/3096079.git
