--- a/.gitmodules
+++ b/.gitmodules
@@ -850,3 +850,6 @@
 [submodule "3086394"]
 	path = 3086394
 	url = https://gist.github.com/3086394.git
+[submodule "3096046"]
+	path = 3096046
+	url = https://gist.github.com/3096046.git
