--- a/.gitmodules
+++ b/.gitmodules
@@ -847,3 +847,6 @@
 [submodule "3085150"]
 	path = 3085150
 	url = https://gist.github.com/3085150.git
+[submodule "3086394"]
+	path = 3086394
+	url = https://gist.github.com/3086394.git
