--- a/.gitmodules
+++ b/.gitmodules
@@ -859,3 +859,6 @@
 [submodule "3096297"]
 	path = 3096297
 	url = https://gist.github.com/3096297.git
+[submodule "3102595"]
+	path = 3102595
+	url = https://gist.github.com/3102595.git
