--- a/.gitmodules
+++ b/.gitmodules
@@ -862,3 +862,6 @@
 [submodule "3102595"]
 	path = 3102595
 	url = https://gist.github.com/3102595.git
+[submodule "3102669"]
+	path = 3102669
+	url = https://gist.github.com/3102669.git
