--- a/.gitmodules
+++ b/.gitmodules
@@ -856,3 +856,6 @@
 [submodule "3096079"]
 	path = 3096079
 	url = https://gist.github.com/3096079.git
+[submodule "3096297"]
+	path = 3096297
+	url = https://gist.github.com/3096297.git
