--- a/.gitmodules
+++ b/.gitmodules
@@ -868,3 +868,6 @@
 [submodule "3131808"]
 	path = 3131808
 	url = https://gist.github.com/3131808.git
+[submodule "3132292"]
+	path = 3132292
+	url = https://gist.github.com/3132292.git
