--- a/.gitmodules
+++ b/.gitmodules
@@ -874,3 +874,6 @@
 [submodule "3172574"]
 	path = 3172574
 	url = https://gist.github.com/3172574.git
+[submodule "3208991"]
+	path = 3208991
+	url = https://gist.github.com/3208991.git
