--- a/.gitmodules
+++ b/.gitmodules
@@ -871,3 +871,6 @@
 [submodule "3132292"]
 	path = 3132292
 	url = https://gist.github.com/3132292.git
+[submodule "3172574"]
+	path = 3172574
+	url = https://gist.github.com/3172574.git
