--- a/.gitmodules
+++ b/.gitmodules
@@ -877,3 +877,6 @@
 [submodule "3208991"]
 	path = 3208991
 	url = https://gist.github.com/3208991.git
+[submodule "3224459"]
+	path = 3224459
+	url = https://gist.github.com/3224459.git
