--- a/.gitmodules
+++ b/.gitmodules
@@ -865,3 +865,6 @@
 [submodule "3102669"]
 	path = 3102669
 	url = https://gist.github.com/3102669.git
+[submodule "3131808"]
+	path = 3131808
+	url = https://gist.github.com/3131808.git
