--- a/.gitmodules
+++ b/.gitmodules
@@ -892,3 +892,6 @@
 [submodule "3278351"]
 	path = 3278351
 	url = https://gist.github.com/3278351.git
+[submodule "3278419"]
+	path = 3278419
+	url = https://gist.github.com/3278419.git
