--- a/.gitmodules
+++ b/.gitmodules
@@ -880,3 +880,6 @@
 [submodule "3224459"]
 	path = 3224459
 	url = https://gist.github.com/3224459.git
+[submodule "3224680"]
+	path = 3224680
+	url = https://gist.github.com/3224680.git
