--- a/.gitmodules
+++ b/.gitmodules
@@ -889,3 +889,6 @@
 [submodule "3278254"]
 	path = 3278254
 	url = https://gist.github.com/3278254.git
+[submodule "3278351"]
+	path = 3278351
+	url = https://gist.github.com/3278351.git
