--- a/.gitmodules
+++ b/.gitmodules
@@ -895,3 +895,6 @@
 [submodule "3278419"]
 	path = 3278419
 	url = https://gist.github.com/3278419.git
+[submodule "3281161"]
+	path = 3281161
+	url = https://gist.github.com/3281161.git
