--- a/.gitmodules
+++ b/.gitmodules
@@ -883,3 +883,6 @@
 [submodule "3224680"]
 	path = 3224680
 	url = https://gist.github.com/3224680.git
+[submodule "3278150"]
+	path = 3278150
+	url = https://gist.github.com/3278150.git
