--- a/.gitmodules
+++ b/.gitmodules
@@ -886,3 +886,6 @@
 [submodule "3278150"]
 	path = 3278150
 	url = https://gist.github.com/3278150.git
+[submodule "3278254"]
+	path = 3278254
+	url = https://gist.github.com/3278254.git
