--- a/.gitmodules
+++ b/.gitmodules
@@ -907,3 +907,6 @@
 [submodule "3307759"]
 	path = 3307759
 	url = https://gist.github.com/3307759.git
+[submodule "3308169"]
+	path = 3308169
+	url = https://gist.github.com/3308169.git
