--- a/.gitmodules
+++ b/.gitmodules
@@ -910,3 +910,6 @@
 [submodule "3308169"]
 	path = 3308169
 	url = https://gist.github.com/3308169.git
+[submodule "3308477"]
+	path = 3308477
+	url = https://gist.github.com/3308477.git
