--- a/.gitmodules
+++ b/.gitmodules
@@ -898,3 +898,6 @@
 [submodule "3281161"]
 	path = 3281161
 	url = https://gist.github.com/3281161.git
+[submodule "3288565"]
+	path = 3288565
+	url = https://gist.github.com/3288565.git
