--- a/.gitmodules
+++ b/.gitmodules
@@ -904,3 +904,6 @@
 [submodule "3306656"]
 	path = 3306656
 	url = https://gist.github.com/3306656.git
+[submodule "3307759"]
+	path = 3307759
+	url = https://gist.github.com/3307759.git
