--- a/.gitmodules
+++ b/.gitmodules
@@ -901,3 +901,6 @@
 [submodule "3288565"]
 	path = 3288565
 	url = https://gist.github.com/3288565.git
+[submodule "3306656"]
+	path = 3306656
+	url = https://gist.github.com/3306656.git
