--- a/.gitmodules
+++ b/.gitmodules
@@ -922,3 +922,6 @@
 [submodule "3353521"]
 	path = 3353521
 	url = https://gist.github.com/3353521.git
+[submodule "3361987"]
+	path = 3361987
+	url = https://gist.github.com/3361987.git
