--- a/.gitmodules
+++ b/.gitmodules
@@ -919,3 +919,6 @@
 [submodule "3342568"]
 	path = 3342568
 	url = https://gist.github.com/3342568.git
+[submodule "3353521"]
+	path = 3353521
+	url = https://gist.github.com/3353521.git
