--- a/.gitmodules
+++ b/.gitmodules
@@ -928,3 +928,6 @@
 [submodule "3375959"]
 	path = 3375959
 	url = https://gist.github.com/3375959.git
+[submodule "3376163"]
+	path = 3376163
+	url = https://gist.github.com/3376163.git
