--- a/.gitmodules
+++ b/.gitmodules
@@ -913,3 +913,6 @@
 [submodule "3308477"]
 	path = 3308477
 	url = https://gist.github.com/3308477.git
+[submodule "3317656"]
+	path = 3317656
+	url = https://gist.github.com/3317656.git
