--- a/.gitmodules
+++ b/.gitmodules
@@ -916,3 +916,6 @@
 [submodule "3317656"]
 	path = 3317656
 	url = https://gist.github.com/3317656.git
+[submodule "3342568"]
+	path = 3342568
+	url = https://gist.github.com/3342568.git
