--- a/.gitmodules
+++ b/.gitmodules
@@ -925,3 +925,6 @@
 [submodule "3361987"]
 	path = 3361987
 	url = https://gist.github.com/3361987.git
+[submodule "3375959"]
+	path = 3375959
+	url = https://gist.github.com/3375959.git
