--- a/.gitmodules
+++ b/.gitmodules
@@ -931,3 +931,6 @@
 [submodule "3376163"]
 	path = 3376163
 	url = https://gist.github.com/3376163.git
+[submodule "3380979"]
+	path = 3380979
+	url = https://gist.github.com/3380979.git
