--- a/.gitmodules
+++ b/.gitmodules
@@ -937,3 +937,6 @@
 [submodule "3381234"]
 	path = 3381234
 	url = https://gist.github.com/3381234.git
+[submodule "3381608"]
+	path = 3381608
+	url = https://gist.github.com/3381608.git
