--- a/.gitmodules
+++ b/.gitmodules
@@ -934,3 +934,6 @@
 [submodule "3380979"]
 	path = 3380979
 	url = https://gist.github.com/3380979.git
+[submodule "3381234"]
+	path = 3381234
+	url = https://gist.github.com/3381234.git
