--- a/.gitmodules
+++ b/.gitmodules
@@ -940,3 +940,6 @@
 [submodule "3381608"]
 	path = 3381608
 	url = https://gist.github.com/3381608.git
+[submodule "3382999"]
+	path = 3382999
+	url = https://gist.github.com/3382999.git
