--- a/.gitmodules
+++ b/.gitmodules
@@ -952,3 +952,6 @@
 [submodule "3445885"]
 	path = 3445885
 	url = https://gist.github.com/3445885.git
+[submodule "3446704"]
+	path = 3446704
+	url = https://gist.github.com/3446704.git
