--- a/.gitmodules
+++ b/.gitmodules
@@ -946,3 +946,6 @@
 [submodule "3420036"]
 	path = 3420036
 	url = https://gist.github.com/3420036.git
+[submodule "3428576"]
+	path = 3428576
+	url = https://gist.github.com/3428576.git
