--- a/.gitmodules
+++ b/.gitmodules
@@ -943,3 +943,6 @@
 [submodule "3382999"]
 	path = 3382999
 	url = https://gist.github.com/3382999.git
+[submodule "3420036"]
+	path = 3420036
+	url = https://gist.github.com/3420036.git
