--- a/.gitmodules
+++ b/.gitmodules
@@ -958,3 +958,6 @@
 [submodule "3446771"]
 	path = 3446771
 	url = https://gist.github.com/3446771.git
+[submodule "3455161"]
+	path = 3455161
+	url = https://gist.github.com/3455161.git
