--- a/.gitmodules
+++ b/.gitmodules
@@ -955,3 +955,6 @@
 [submodule "3446704"]
 	path = 3446704
 	url = https://gist.github.com/3446704.git
+[submodule "3446771"]
+	path = 3446771
+	url = https://gist.github.com/3446771.git
