--- a/.gitmodules
+++ b/.gitmodules
@@ -949,3 +949,6 @@
 [submodule "3428576"]
 	path = 3428576
 	url = https://gist.github.com/3428576.git
+[submodule "3445885"]
+	path = 3445885
+	url = https://gist.github.com/3445885.git
