--- a/.gitmodules
+++ b/.gitmodules
@@ -973,3 +973,6 @@
 [submodule "3493777"]
 	path = 3493777
 	url = https://gist.github.com/3493777.git
+[submodule "3495044"]
+	path = 3495044
+	url = https://gist.github.com/3495044.git
