--- a/.gitmodules
+++ b/.gitmodules
@@ -964,3 +964,6 @@
 [submodule "3475035"]
 	path = 3475035
 	url = https://gist.github.com/3475035.git
+[submodule "3485191"]
+	path = 3485191
+	url = https://gist.github.com/3485191.git
