--- a/.gitmodules
+++ b/.gitmodules
@@ -970,3 +970,6 @@
 [submodule "3493332"]
 	path = 3493332
 	url = https://gist.github.com/3493332.git
+[submodule "3493777"]
+	path = 3493777
+	url = https://gist.github.com/3493777.git
