--- a/.gitmodules
+++ b/.gitmodules
@@ -961,3 +961,6 @@
 [submodule "3455161"]
 	path = 3455161
 	url = https://gist.github.com/3455161.git
+[submodule "3475035"]
+	path = 3475035
+	url = https://gist.github.com/3475035.git
