--- a/.gitmodules
+++ b/.gitmodules
@@ -967,3 +967,6 @@
 [submodule "3485191"]
 	path = 3485191
 	url = https://gist.github.com/3485191.git
+[submodule "3493332"]
+	path = 3493332
+	url = https://gist.github.com/3493332.git
