--- a/.gitmodules
+++ b/.gitmodules
@@ -985,3 +985,6 @@
 [submodule "3495435"]
 	path = 3495435
 	url = https://gist.github.com/3495435.git
+[submodule "3627182"]
+	path = 3627182
+	url = https://gist.github.com/3627182.git
