--- a/.gitmodules
+++ b/.gitmodules
@@ -979,3 +979,6 @@
 [submodule "3495176"]
 	path = 3495176
 	url = https://gist.github.com/3495176.git
+[submodule "3495241"]
+	path = 3495241
+	url = https://gist.github.com/3495241.git
