--- a/.gitmodules
+++ b/.gitmodules
@@ -976,3 +976,6 @@
 [submodule "3495044"]
 	path = 3495044
 	url = https://gist.github.com/3495044.git
+[submodule "3495176"]
+	path = 3495176
+	url = https://gist.github.com/3495176.git
