--- a/.gitmodules
+++ b/.gitmodules
@@ -982,3 +982,6 @@
 [submodule "3495241"]
 	path = 3495241
 	url = https://gist.github.com/3495241.git
+[submodule "3495435"]
+	path = 3495435
+	url = https://gist.github.com/3495435.git
