--- a/.gitmodules
+++ b/.gitmodules
@@ -988,3 +988,6 @@
 [submodule "3627182"]
 	path = 3627182
 	url = https://gist.github.com/3627182.git
+[submodule "3644743"]
+	path = 3644743
+	url = https://gist.github.com/3644743.git
