--- a/.gitmodules
+++ b/.gitmodules
@@ -991,3 +991,6 @@
 [submodule "3644743"]
 	path = 3644743
 	url = https://gist.github.com/3644743.git
+[submodule "3644748"]
+	path = 3644748
+	url = https://gist.github.com/3644748.git
