--- a/.gitmodules
+++ b/.gitmodules
@@ -997,3 +997,6 @@
 [submodule "3661018"]
 	path = 3661018
 	url = https://gist.github.com/3661018.git
+[submodule "3697190"]
+	path = 3697190
+	url = https://gist.github.com/3697190.git
