--- a/.gitmodules
+++ b/.gitmodules
@@ -1003,3 +1003,6 @@
 [submodule "3712833"]
 	path = 3712833
 	url = https://gist.github.com/3712833.git
+[submodule "3712858"]
+	path = 3712858
+	url = https://gist.github.com/3712858.git
