--- a/.gitmodules
+++ b/.gitmodules
@@ -994,3 +994,6 @@
 [submodule "3644748"]
 	path = 3644748
 	url = https://gist.github.com/3644748.git
+[submodule "3661018"]
+	path = 3661018
+	url = https://gist.github.com/3661018.git
