--- a/.gitmodules
+++ b/.gitmodules
@@ -1000,3 +1000,6 @@
 [submodule "3697190"]
 	path = 3697190
 	url = https://gist.github.com/3697190.git
+[submodule "3712833"]
+	path = 3712833
+	url = https://gist.github.com/3712833.git
