--- a/.gitmodules
+++ b/.gitmodules
@@ -1021,3 +1021,6 @@
 [submodule "3928100"]
 	path = 3928100
 	url = https://gist.github.com/3928100.git
+[submodule "3959695"]
+	path = 3959695
+	url = https://gist.github.com/3959695.git
