--- a/.gitmodules
+++ b/.gitmodules
@@ -1012,3 +1012,6 @@
 [submodule "3789552"]
 	path = 3789552
 	url = https://gist.github.com/3789552.git
+[submodule "3798190"]
+	path = 3798190
+	url = https://gist.github.com/3798190.git
