--- a/.gitmodules
+++ b/.gitmodules
@@ -1006,3 +1006,6 @@
 [submodule "3712858"]
 	path = 3712858
 	url = https://gist.github.com/3712858.git
+[submodule "3724780"]
+	path = 3724780
+	url = https://gist.github.com/3724780.git
