--- a/.gitmodules
+++ b/.gitmodules
@@ -1018,3 +1018,6 @@
 [submodule "3798216"]
 	path = 3798216
 	url = https://gist.github.com/3798216.git
+[submodule "3928100"]
+	path = 3928100
+	url = https://gist.github.com/3928100.git
