--- a/.gitmodules
+++ b/.gitmodules
@@ -1009,3 +1009,6 @@
 [submodule "3724780"]
 	path = 3724780
 	url = https://gist.github.com/3724780.git
+[submodule "3789552"]
+	path = 3789552
+	url = https://gist.github.com/3789552.git
