--- a/.gitmodules
+++ b/.gitmodules
@@ -1015,3 +1015,6 @@
 [submodule "3798190"]
 	path = 3798190
 	url = https://gist.github.com/3798190.git
+[submodule "3798216"]
+	path = 3798216
+	url = https://gist.github.com/3798216.git
