--- a/.gitmodules
+++ b/.gitmodules
@@ -1033,3 +1033,6 @@
 [submodule "4046742"]
 	path = 4046742
 	url = https://gist.github.com/4046742.git
+[submodule "4061186"]
+	path = 4061186
+	url = https://gist.github.com/4061186.git
