--- a/.gitmodules
+++ b/.gitmodules
@@ -1036,3 +1036,6 @@
 [submodule "4061186"]
 	path = 4061186
 	url = https://gist.github.com/4061186.git
+[submodule "4111868"]
+	path = 4111868
+	url = https://gist.github.com/4111868.git
