--- a/.gitmodules
+++ b/.gitmodules
@@ -1024,3 +1024,6 @@
 [submodule "3959695"]
 	path = 3959695
 	url = https://gist.github.com/3959695.git
+[submodule "3991348"]
+	path = 3991348
+	url = https://gist.github.com/3991348.git
