--- a/.gitmodules
+++ b/.gitmodules
@@ -1030,3 +1030,6 @@
 [submodule "4004187"]
 	path = 4004187
 	url = https://gist.github.com/4004187.git
+[submodule "4046742"]
+	path = 4046742
+	url = https://gist.github.com/4046742.git
