--- a/.gitmodules
+++ b/.gitmodules
@@ -1027,3 +1027,6 @@
 [submodule "3991348"]
 	path = 3991348
 	url = https://gist.github.com/3991348.git
+[submodule "4004187"]
+	path = 4004187
+	url = https://gist.github.com/4004187.git
