--- a/.gitmodules
+++ b/.gitmodules
@@ -1045,3 +1045,6 @@
 [submodule "4155285"]
 	path = 4155285
 	url = https://gist.github.com/4155285.git
+[submodule "4159065"]
+	path = 4159065
+	url = https://gist.github.com/4159065.git
