--- a/.gitmodules
+++ b/.gitmodules
@@ -1048,3 +1048,6 @@
 [submodule "4159065"]
 	path = 4159065
 	url = https://gist.github.com/4159065.git
+[submodule "4159824"]
+	path = 4159824
+	url = https://gist.github.com/4159824.git
