--- a/.gitmodules
+++ b/.gitmodules
@@ -1039,3 +1039,6 @@
 [submodule "4111868"]
 	path = 4111868
 	url = https://gist.github.com/4111868.git
+[submodule "4126574"]
+	path = 4126574
+	url = https://gist.github.com/4126574.git
