--- a/.gitmodules
+++ b/.gitmodules
@@ -1051,3 +1051,6 @@
 [submodule "4159824"]
 	path = 4159824
 	url = https://gist.github.com/4159824.git
+[submodule "4159837"]
+	path = 4159837
+	url = https://gist.github.com/4159837.git
