--- a/.gitmodules
+++ b/.gitmodules
@@ -1042,3 +1042,6 @@
 [submodule "4126574"]
 	path = 4126574
 	url = https://gist.github.com/4126574.git
+[submodule "4155285"]
+	path = 4155285
+	url = https://gist.github.com/4155285.git
