--- a/.gitmodules
+++ b/.gitmodules
@@ -1063,3 +1063,6 @@
 [submodule "4179996"]
 	path = 4179996
 	url = https://gist.github.com/4179996.git
+[submodule "4187990"]
+	path = 4187990
+	url = https://gist.github.com/4187990.git
