--- a/.gitmodules
+++ b/.gitmodules
@@ -1066,3 +1066,6 @@
 [submodule "4187990"]
 	path = 4187990
 	url = https://gist.github.com/4187990.git
+[submodule "4251761"]
+	path = 4251761
+	url = https://gist.github.com/4251761.git
