--- a/.gitmodules
+++ b/.gitmodules
@@ -1060,3 +1060,6 @@
 [submodule "4178051"]
 	path = 4178051
 	url = https://gist.github.com/4178051.git
+[submodule "4179996"]
+	path = 4179996
+	url = https://gist.github.com/4179996.git
