--- a/.gitmodules
+++ b/.gitmodules
@@ -1054,3 +1054,6 @@
 [submodule "4159837"]
 	path = 4159837
 	url = https://gist.github.com/4159837.git
+[submodule "4178047"]
+	path = 4178047
+	url = https://gist.github.com/4178047.git
