--- a/.gitmodules
+++ b/.gitmodules
@@ -1057,3 +1057,6 @@
 [submodule "4178047"]
 	path = 4178047
 	url = https://gist.github.com/4178047.git
+[submodule "4178051"]
+	path = 4178051
+	url = https://gist.github.com/4178051.git
