--- a/.gitmodules
+++ b/.gitmodules
@@ -1069,3 +1069,6 @@
 [submodule "4251761"]
 	path = 4251761
 	url = https://gist.github.com/4251761.git
+[submodule "4323188"]
+	path = 4323188
+	url = https://gist.github.com/4323188.git
