--- a/.gitmodules
+++ b/.gitmodules
@@ -1081,3 +1081,6 @@
 [submodule "4333725"]
 	path = 4333725
 	url = https://gist.github.com/4333725.git
+[submodule "4341501"]
+	path = 4341501
+	url = https://gist.github.com/4341501.git
