--- a/.gitmodules
+++ b/.gitmodules
@@ -1075,3 +1075,6 @@
 [submodule "4327099"]
 	path = 4327099
 	url = https://gist.github.com/4327099.git
+[submodule "4333700"]
+	path = 4333700
+	url = https://gist.github.com/4333700.git
