--- a/.gitmodules
+++ b/.gitmodules
@@ -1072,3 +1072,6 @@
 [submodule "4323188"]
 	path = 4323188
 	url = https://gist.github.com/4323188.git
+[submodule "4327099"]
+	path = 4327099
+	url = https://gist.github.com/4327099.git
