--- a/.gitmodules
+++ b/.gitmodules
@@ -1078,3 +1078,6 @@
 [submodule "4333700"]
 	path = 4333700
 	url = https://gist.github.com/4333700.git
+[submodule "4333725"]
+	path = 4333725
+	url = https://gist.github.com/4333725.git
