--- a/.gitmodules
+++ b/.gitmodules
@@ -1093,3 +1093,6 @@
 [submodule "4368098"]
 	path = 4368098
 	url = https://gist.github.com/4368098.git
+[submodule "4373392"]
+	path = 4373392
+	url = https://gist.github.com/4373392.git
