--- a/.gitmodules
+++ b/.gitmodules
@@ -1087,3 +1087,6 @@
 [submodule "4344130"]
 	path = 4344130
 	url = https://gist.github.com/4344130.git
+[submodule "4352625"]
+	path = 4352625
+	url = https://gist.github.com/4352625.git
