--- a/.gitmodules
+++ b/.gitmodules
@@ -1096,3 +1096,6 @@
 [submodule "4373392"]
 	path = 4373392
 	url = https://gist.github.com/4373392.git
+[submodule "4473989"]
+	path = 4473989
+	url = https://gist.github.com/4473989.git
