--- a/.gitmodules
+++ b/.gitmodules
@@ -1090,3 +1090,6 @@
 [submodule "4352625"]
 	path = 4352625
 	url = https://gist.github.com/4352625.git
+[submodule "4368098"]
+	path = 4368098
+	url = https://gist.github.com/4368098.git
