--- a/.gitmodules
+++ b/.gitmodules
@@ -1084,3 +1084,6 @@
 [submodule "4341501"]
 	path = 4341501
 	url = https://gist.github.com/4341501.git
+[submodule "4344130"]
+	path = 4344130
+	url = https://gist.github.com/4344130.git
