--- a/.gitmodules
+++ b/.gitmodules
@@ -1102,3 +1102,6 @@
 [submodule "4474289"]
 	path = 4474289
 	url = https://gist.github.com/4474289.git
+[submodule "4482613"]
+	path = 4482613
+	url = https://gist.github.com/4482613.git
