--- a/.gitmodules
+++ b/.gitmodules
@@ -1105,3 +1105,6 @@
 [submodule "4482613"]
 	path = 4482613
 	url = https://gist.github.com/4482613.git
+[submodule "4495376"]
+	path = 4495376
+	url = https://gist.github.com/4495376.git
