--- a/.gitmodules
+++ b/.gitmodules
@@ -1111,3 +1111,6 @@
 [submodule "4510351"]
 	path = 4510351
 	url = https://gist.github.com/4510351.git
+[submodule "4570066"]
+	path = 4570066
+	url = https://gist.github.com/4570066.git
