--- a/.gitmodules
+++ b/.gitmodules
@@ -1099,3 +1099,6 @@
 [submodule "4473989"]
 	path = 4473989
 	url = https://gist.github.com/4473989.git
+[submodule "4474289"]
+	path = 4474289
+	url = https://gist.github.com/4474289.git
