--- a/.gitmodules
+++ b/.gitmodules
@@ -1114,3 +1114,6 @@
 [submodule "4570066"]
 	path = 4570066
 	url = https://gist.github.com/4570066.git
+[submodule "4582342"]
+	path = 4582342
+	url = https://gist.github.com/4582342.git
