--- a/.gitmodules
+++ b/.gitmodules
@@ -1108,3 +1108,6 @@
 [submodule "4495376"]
 	path = 4495376
 	url = https://gist.github.com/4495376.git
+[submodule "4510351"]
+	path = 4510351
+	url = https://gist.github.com/4510351.git
