--- a/.gitmodules
+++ b/.gitmodules
@@ -1129,3 +1129,6 @@
 [submodule "4703552"]
 	path = 4703552
 	url = https://gist.github.com/4703552.git
+[submodule "4733282"]
+	path = 4733282
+	url = https://gist.github.com/4733282.git
