--- a/.gitmodules
+++ b/.gitmodules
@@ -1126,3 +1126,6 @@
 [submodule "4702947"]
 	path = 4702947
 	url = https://gist.github.com/4702947.git
+[submodule "4703552"]
+	path = 4703552
+	url = https://gist.github.com/4703552.git
