--- a/.gitmodules
+++ b/.gitmodules
@@ -1117,3 +1117,6 @@
 [submodule "4582342"]
 	path = 4582342
 	url = https://gist.github.com/4582342.git
+[submodule "4618500"]
+	path = 4618500
+	url = https://gist.github.com/4618500.git
