--- a/.gitmodules
+++ b/.gitmodules
@@ -1120,3 +1120,6 @@
 [submodule "4618500"]
 	path = 4618500
 	url = https://gist.github.com/4618500.git
+[submodule "4657834"]
+	path = 4657834
+	url = https://gist.github.com/4657834.git
