--- a/.gitmodules
+++ b/.gitmodules
@@ -1123,3 +1123,6 @@
 [submodule "4657834"]
 	path = 4657834
 	url = https://gist.github.com/4657834.git
+[submodule "4702947"]
+	path = 4702947
+	url = https://gist.github.com/4702947.git
