--- a/.gitmodules
+++ b/.gitmodules
@@ -1138,3 +1138,6 @@
 [submodule "4760073"]
 	path = 4760073
 	url = https://gist.github.com/4760073.git
+[submodule "4951256"]
+	path = 4951256
+	url = https://gist.github.com/4951256.git
