--- a/.gitmodules
+++ b/.gitmodules
@@ -1135,3 +1135,6 @@
 [submodule "4753239"]
 	path = 4753239
 	url = https://gist.github.com/4753239.git
+[submodule "4760073"]
+	path = 4760073
+	url = https://gist.github.com/4760073.git
