--- a/.gitmodules
+++ b/.gitmodules
@@ -1141,3 +1141,6 @@
 [submodule "4951256"]
 	path = 4951256
 	url = https://gist.github.com/4951256.git
+[submodule "4956458"]
+	path = 4956458
+	url = https://gist.github.com/4956458.git
