--- a/.gitmodules
+++ b/.gitmodules
@@ -1144,3 +1144,6 @@
 [submodule "4956458"]
 	path = 4956458
 	url = https://gist.github.com/4956458.git
+[submodule "5003395"]
+	path = 5003395
+	url = https://gist.github.com/5003395.git
