--- a/.gitmodules
+++ b/.gitmodules
@@ -1132,3 +1132,6 @@
 [submodule "4733282"]
 	path = 4733282
 	url = https://gist.github.com/4733282.git
+[submodule "4753239"]
+	path = 4753239
+	url = https://gist.github.com/4753239.git
