--- a/.gitmodules
+++ b/.gitmodules
@@ -1162,3 +1162,6 @@
 [submodule "5107208"]
 	path = 5107208
 	url = https://gist.github.com/5107208.git
+[submodule "5107210"]
+	path = 5107210
+	url = https://gist.github.com/5107210.git
