--- a/.gitmodules
+++ b/.gitmodules
@@ -1159,3 +1159,6 @@
 [submodule "5060135"]
 	path = 5060135
 	url = https://gist.github.com/5060135.git
+[submodule "5107208"]
+	path = 5107208
+	url = https://gist.github.com/5107208.git
