--- a/.gitmodules
+++ b/.gitmodules
@@ -1150,3 +1150,6 @@
 [submodule "5012961"]
 	path = 5012961
 	url = https://gist.github.com/5012961.git
+[submodule "5046207"]
+	path = 5046207
+	url = https://gist.github.com/5046207.git
