--- a/.gitmodules
+++ b/.gitmodules
@@ -1153,3 +1153,6 @@
 [submodule "5046207"]
 	path = 5046207
 	url = https://gist.github.com/5046207.git
+[submodule "5053961"]
+	path = 5053961
+	url = https://gist.github.com/5053961.git
