--- a/.gitmodules
+++ b/.gitmodules
@@ -1156,3 +1156,6 @@
 [submodule "5053961"]
 	path = 5053961
 	url = https://gist.github.com/5053961.git
+[submodule "5060135"]
+	path = 5060135
+	url = https://gist.github.com/5060135.git
