--- a/.gitmodules
+++ b/.gitmodules
@@ -1147,3 +1147,6 @@
 [submodule "5003395"]
 	path = 5003395
 	url = https://gist.github.com/5003395.git
+[submodule "5012961"]
+	path = 5012961
+	url = https://gist.github.com/5012961.git
