--- a/.gitmodules
+++ b/.gitmodules
@@ -1165,3 +1165,6 @@
 [submodule "5107210"]
 	path = 5107210
 	url = https://gist.github.com/5107210.git
+[submodule "5107597"]
+	path = 5107597
+	url = https://gist.github.com/5107597.git
