--- a/.gitmodules
+++ b/.gitmodules
@@ -1174,3 +1174,6 @@
 [submodule "5123446"]
 	path = 5123446
 	url = https://gist.github.com/5123446.git
+[submodule "5143627"]
+	path = 5143627
+	url = https://gist.github.com/5143627.git
