--- a/.gitmodules
+++ b/.gitmodules
@@ -1168,3 +1168,6 @@
 [submodule "5107597"]
 	path = 5107597
 	url = https://gist.github.com/5107597.git
+[submodule "5107672"]
+	path = 5107672
+	url = https://gist.github.com/5107672.git
