--- a/.gitmodules
+++ b/.gitmodules
@@ -1171,3 +1171,6 @@
 [submodule "5107672"]
 	path = 5107672
 	url = https://gist.github.com/5107672.git
+[submodule "5123446"]
+	path = 5123446
+	url = https://gist.github.com/5123446.git
