--- a/.gitmodules
+++ b/.gitmodules
@@ -1177,3 +1177,6 @@
 [submodule "5143627"]
 	path = 5143627
 	url = https://gist.github.com/5143627.git
+[submodule "5144140"]
+	path = 5144140
+	url = https://gist.github.com/5144140.git
