--- a/.gitmodules
+++ b/.gitmodules
@@ -1186,3 +1186,6 @@
 [submodule "5169897"]
 	path = 5169897
 	url = https://gist.github.com/5169897.git
+[submodule "5169918"]
+	path = 5169918
+	url = https://gist.github.com/5169918.git
