--- a/.gitmodules
+++ b/.gitmodules
@@ -1192,3 +1192,6 @@
 [submodule "5169945"]
 	path = 5169945
 	url = https://gist.github.com/5169945.git
+[submodule "5181621"]
+	path = 5181621
+	url = https://gist.github.com/5181621.git
