--- a/.gitmodules
+++ b/.gitmodules
@@ -1183,3 +1183,6 @@
 [submodule "5154173"]
 	path = 5154173
 	url = https://gist.github.com/5154173.git
+[submodule "5169897"]
+	path = 5169897
+	url = https://gist.github.com/5169897.git
