--- a/.gitmodules
+++ b/.gitmodules
@@ -1189,3 +1189,6 @@
 [submodule "5169918"]
 	path = 5169918
 	url = https://gist.github.com/5169918.git
+[submodule "5169945"]
+	path = 5169945
+	url = https://gist.github.com/5169945.git
