--- a/.gitmodules
+++ b/.gitmodules
@@ -1180,3 +1180,6 @@
 [submodule "5144140"]
 	path = 5144140
 	url = https://gist.github.com/5144140.git
+[submodule "5154173"]
+	path = 5154173
+	url = https://gist.github.com/5154173.git
