--- a/.gitmodules
+++ b/.gitmodules
@@ -1204,3 +1204,6 @@
 [submodule "5194493"]
 	path = 5194493
 	url = https://gist.github.com/5194493.git
+[submodule "5229977"]
+	path = 5229977
+	url = https://gist.github.com/5229977.git
