--- a/.gitmodules
+++ b/.gitmodules
@@ -1195,3 +1195,6 @@
 [submodule "5181621"]
 	path = 5181621
 	url = https://gist.github.com/5181621.git
+[submodule "5183770"]
+	path = 5183770
+	url = https://gist.github.com/5183770.git
